Fixed issue with sudoku grid on mobile

--- a/static/styles/sudoku-grid.css
+++ b/static/styles/sudoku-grid.css
@@ -25,6 +25,11 @@
     border-style: solid;
     border-width: 3px;
 
+    div {
+        display:flex;
+        flex-wrap: nowrap;
+    }
+
     input {
         width: var(--square-dimension);
         height: var(--square-dimension);
